force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Acc_Country__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Acc_Country__c</fullName>
    <label>Acc Country</label>
    <length>45</length>
    <type>Text</type>
</CustomField>