force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Acc_Global_Location__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Acc_Global_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acc Global Location</label>
    <referenceTo>Negoptim__Global_Location__c</referenceTo>
    <relationshipLabel>Clients/Suppliers</relationshipLabel>
    <relationshipName>Clients_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>