force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Admin_Global_Location__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Admin_Global_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Global Location</label>
    <referenceTo>Negoptim__Global_Location__c</referenceTo>
    <relationshipLabel>Clients/Suppliers (Admin Global Location)</relationshipLabel>
    <relationshipName>Clients_Suppliers1</relationshipName>
    <type>Lookup</type>
</CustomField>