force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Code__c</fullName>
    <description>User supplier code</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>