force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Logo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Logo__c</fullName>
    <description>Formula for logo based on the ressource file name = the Code field</description>
    <formula>IMAGE(&apos;/resource/LogosSupplier&apos; + RecordType.DeveloperName + &apos;/LogosSupplier&apos; + RecordType.DeveloperName + &apos;/&apos; + Negoptim__Code__c +&apos;.png&apos;, &apos;&apos; , 45, 90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>