force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__NS_Name_Autonum__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NS_Name_Autonum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NS Name Autonum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>