force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Ref_Country__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Country__c</fullName>
    <description>Reference address coming from external system</description>
    <inlineHelpText>Adresse de référence provenant d&apos;un système externe</inlineHelpText>
    <label>Ref Country</label>
    <length>45</length>
    <type>Text</type>
</CustomField>