force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Reference_language__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Reference_language__c</fullName>
    <description>Give the communictaion language witht the supplier (contract, invoice, ..)</description>
    <inlineHelpText>Donne le language de communication avec le fournisseur (contrat, facture,..).</inlineHelpText>
    <label>Reference language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>