force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Status_BDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status_BDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Curent status Begin date</description>
    <inlineHelpText>Date de début du statut.</inlineHelpText>
    <label>Status Begin Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>