force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__Status_EDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status_EDate__c</fullName>
    <description>Curent status Ending date</description>
    <inlineHelpText>Date de fin du statut.</inlineHelpText>
    <label>Status Ending Date</label>
    <type>Date</type>
</CustomField>