force-app/main/default/objects/Negoptim__Supplier__c/fields/Negoptim__URL__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__URL__c</fullName>
    <description>Supplier reference web site</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>