force-app/main/default/objects/Negoptim__Supplier__c/recordTypes/Negoptim__Client.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Client</fullName>
    <active>true</active>
    <label>Client</label>
</RecordType>