force-app/main/default/objects/Negoptim__Supplier__c/recordTypes/Negoptim__Supplier.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Supplier</fullName>
    <active>true</active>
    <label>Supplier</label>
</RecordType>