force-app/main/default/objects/Negoptim__Supplier__c/listViews/Negoptim__CPG_01_Clients.listView-meta.xml
<ListView>
    <fullName>Negoptim__CPG_01_Clients</fullName>
    <columns>NAME</columns>
    <columns>Negoptim__Logo__c</columns>
    <columns>Negoptim__Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Negoptim__Supplier__c.Negoptim__Client</value>
    </filters>
    <filters>
        <field>Negoptim__Code__c</field>
        <operation>notContain</operation>
        <value>IND-</value>
    </filters>
    <label>01 Les Clients</label>
</ListView>