force-app/main/default/objects/Negoptim__Supplier__c/listViews/Negoptim__O1Suppliers.listView-meta.xml
<ListView>
    <fullName>Negoptim__O1Suppliers</fullName>
    <columns>NAME</columns>
    <columns>Negoptim__Logo__c</columns>
    <columns>Negoptim__Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Negoptim__Supplier__c.Negoptim__Supplier</value>
    </filters>
    <label>02 Les Fournisseurs</label>
</ListView>